<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BuddyBuddy</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="take_home_button">Take\nMe\nHome</string>
    <string name="title_activity_schedule">MainActivity</string>
    <string name="schedule_title">Schedule A Walk</string>
    <string name="title_activity_favorites">FavoritesActivity</string>
    <string name="favorite_title">Favorite Locations</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="title_activity_add_favorite">Add a Favorite Location</string>
    <string name="favorite_name">Location Name</string>
    <string name="station_name">Station Name</string>
 	<string name="login_button_text">Login</string>
 	<string name="go">GO</string>
 	<string name="when">When</string>
 	<string name="where">Where</string>
 	<string name="stations_title">Select a Station</string>
 	<string name="title_activity_stations">Stations</string>
 	<string name="stations">Stations</string>
 	<string name="train">Train</string>
 	<string name="departure">till departure</string>
 	<string name="title_activity_train">Train</string>
 	<string name="add_station">Add Station</string>
	<string name="title_activity_add_station">Add a Station</string>
 	<string name="address">Address</string>
</resources>
